Remove BuiltinFunctionUtils and unnecessary UDFs
Signed-off-by: Yuanchun Shen <yuanchu@amazon.com>